Allowed 'java.*', rather then just 'java.annotation' loading for jdk 11